2004-11-19  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_can_play):
	  Enable VCD/SVCD again.
	* src/totem-disc.c: (cd_cache_disc_is_vcd):
	  Add SVCD detection.

2004-11-19  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* README: upd
	* configure.in: 0.99.21

2004-11-19  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated

2004-11-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-screenshot.c: (totem_screenshot_temp_file),
	(totem_screenshot_finalize), (drag_data_get), (drag_begin),
	(totem_screenshot_new): Implement drag in the screenshot dialog,
	it's a bit simplistic, and slow machines won't cope very well...
	Send patches (Closes: #119903)

2004-11-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (drop_cb), (init_treeview):
	* src/totem.c: (totem_action_drop_files), (drop_video_cb),
	(drop_playlist_cb), (video_widget_create): implement drag'n'drop from
	Mozilla (_NETSCAPE_URL sucks!) (Closes: #158559)

2004-11-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated

2004-11-18  Bastien Nocera  <hadess@hadess.net>

	* data/totem_logo.png: for some reason, I get a nice staircase effect
	when the width of the image is odd with xine-lib
	* src/totem.c: (on_about1_activate): update Copyright notice

2004-11-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_base_url),
	(totem_pl_parser_relative): Don't crash if we can't get a GnomeVFSURI
	when saving the playlist (Closes: #158228)

2004-11-16  Christian Schaller <uraeus@gnome.org>

	* src/Makefile.am: Remove reference to removed header file

2004-11-15  Bastien Nocera  <hadess@hadess.net>

	* src/test-parser.c: (test_parsing_real), (push_parser): add another
	parsing test
	* src/totem-pl-parser.c: (totem_pl_parser_add_directory): fix crash
	adding a directory and there's an error getting the disc type

2004-11-14  Bastien Nocera  <hadess@hadess.net>
