@@ -221,7 +221,10 @@ bacon_video_widget_realize (GtkWidget * widget)
   attributes.visual = gtk_widget_get_visual (widget);
   attributes.colormap = gtk_widget_get_colormap (widget);
   attributes.event_mask = gtk_widget_get_events (widget);
-  attributes.event_mask |= GDK_EXPOSURE_MASK;
+  attributes.event_mask |= GDK_EXPOSURE_MASK |
+			   GDK_POINTER_MOTION_MASK |
+			   GDK_BUTTON_PRESS_MASK |
+			   GDK_KEY_PRESS_MASK;
   attributes_mask = GDK_WA_X | GDK_WA_Y | GDK_WA_VISUAL | GDK_WA_COLORMAP;
 
   widget->window = gdk_window_new (gtk_widget_get_parent_window (widget),
@@ -236,7 +239,11 @@ bacon_video_widget_realize (GtkWidget * widget)
   attributes.width = widget->allocation.width;
   attributes.height = widget->allocation.height;
   attributes.wclass = GDK_INPUT_OUTPUT;
-  attributes.event_mask = GDK_EXPOSURE_MASK;
+  attributes.event_mask = gtk_widget_get_events (widget);
+  attributes.event_mask |= GDK_EXPOSURE_MASK |
+			  GDK_POINTER_MOTION_MASK |
+			  GDK_BUTTON_PRESS_MASK |
+			  GDK_KEY_PRESS_MASK;
   attributes_mask = GDK_WA_X | GDK_WA_Y;
 
   bvw->priv->video_window = gdk_window_new (widget->window,
